Fixed weird spacing issue on template selection

--- a/src/webparts/columnFormatter/components/ColumnFormatter.module.scss
+++ b/src/webparts/columnFormatter/components/ColumnFormatter.module.scss
@@ -81,6 +81,8 @@
 
       .newForm {
         .columnType {
+          padding-bottom: 8px;
+          
           label {
             padding-top: 0;
           }
@@ -88,7 +90,7 @@
 
         :global {
           .ms-ChoiceField {
-            margin-top: 0;
+            margin-top: 0 !important;
           }
         }
       }
